# opencv

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: my_header.h
scripts/: crop_face.py
src/: CMakeLists.txt  main.cpp
